--- a/config/dbconfig.json
+++ b/config/dbconfig.json
@@ -2,5 +2,6 @@
     "host" : "localhost",
     "user" : "root",
     "password" : "1111",
-    "database" : "firstdatabase"
+    "database" : "firstdatabase",
+    "connectionLimit": 10
 }
